src/objects/IGOM_Contact_Role_Procedure_Compliance__c.object
<CustomObject>
    <description>Manage the relationship between the Contact Role and the Procedure Compliance.</description>
    <fields>
        <fullName>Compliance_Review_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GAP Analysis Item the Notification belongs to</description>
        <label>Compliance Review Part</label>
        <referenceTo>Compliance_Review_Part__c</referenceTo>
        <relationshipLabel>IGOM Contact Role Procedure Compliances</relationshipLabel>
        <relationshipName>IGOM_Contact_Role_Procedure_Compliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IGOM_Contact_Role_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IGOM Contact Role Detail that the IGOM Contact Role Procedure Compliance is related to.</description>
        <label>IGOM Contact Role Detail</label>
        <referenceTo>IGOM_Contact_Role_Detail__c</referenceTo>
        <relationshipLabel>IGOM Contact Role Procedure Compliances</relationshipLabel>
        <relationshipName>IGOM_Contact_Role_Procedure_Compliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_Body__c</fullName>
        <description>Body of the Notification.</description>
        <label>Notification Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <description>Date and Time the Notification has been sent in.</description>
        <label>Notification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notification_Status__c</fullName>
        <description>Status of the Notification.</description>
        <label>Notification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unread</fullName>
                    <default>true</default>
                    <label>Unread</label>
                </value>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Subject__c</fullName>
        <description>Subject of the Notification.</description>
        <label>Notification Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Indicates the type of the IGOM Contact Procedure Compliance record</description>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Informative</fullName>
                    <default>true</default>
                    <label>Informative</label>
                </value>
                <value>
                    <fullName>Action Required</fullName>
                </value>
                <value>
                    <fullName>Recommended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IGOM Contact Role Procedure Compliance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Notification_Subject__c</columns>
        <columns>IGOM_Contact_Role_Detail__c</columns>
        <columns>Compliance_Review_Part__c</columns>
        <columns>Notification_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IGNOT-{00000000}</displayFormat>
        <label>IGOM Contact Role Procedure Complian Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IGOM Contact Role Procedure Compliances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>